--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,12 +8,22 @@
 body{
     width: 100vw;
     height: 100vh;
+}
+
+header {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 7vh;
+    z-index: 999;
 }
-
-
+h1 {
+    color: #77ffc0;
+    text-align: center;
+    letter-spacing: 2px;
+}
 
 .filter-background {
     position: fixed;
@@ -40,5 +50,52 @@ body{
     object-fit: cover;
 }
 
+img {
+    margin: 7% auto;
+    transition: 0.5s;
+    border-radius: 10px;
+    box-shadow: 0 0 10px 0px #77ffc0;
+}
+img:hover{
+    box-shadow: 0 0 50px 10px #77ffc0;
+    transform: scale(1.05, 1.05);
+    cursor: pointer;
+}
+#gallery {
+    display: block;
+    margin: 7% auto;
+    width: 300px;
+    height: 200px;
+    border: 3px dotted #77ffc0;
+    background: none;
+}
+#gallery p {
+    color: #77ffc0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 29% auto;
+}
 
+.linha {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: auto;
+    width: 70vw;
+    height: 0.5vh;
+    background-color: #77ffc0;
+}
+.points {
+    padding: 10px;
+    border-radius: 50px;
+    border: none;
+    background-color: #77ffc0;
+    transition: 0.5s;
+}
+.points:hover {
+    transform: scale(3, 3);
+    cursor: pointer;
+    box-shadow: 0 0 3px #77ffc0;
+}
 
