--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,9 @@
     box-sizing: border-box;
     font-family: 'Oswald', 'Open Sans', 'Roboto', 'Noto sans', sans-serif;
 }
+html {
+    scroll-behavior: smooth;
+}
 body{
     width: 100vw;
     height: 100vh;
@@ -14,6 +17,9 @@ body{
 }
 a{
     text-decoration: none;
+}
+a[href="#"]{
+    transition-duration: 1.5s;
 }
 .container {
     display: flex;
@@ -227,7 +233,7 @@ img:hover{
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 20px;
+    font-size: 25px;
     letter-spacing: 2px;
     color: #77ffc0;
     cursor: pointer;
